[package]
name = "setup"
version = "0.1.0"
description = "Sets up the Aptosis faucet."
homepage = "https://aptos.is"
repository = "https://github.com/aptosis/faucet"
authors = ["Ian Macalinao <ian@aptos.is>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "aptos", "account", "cli"]

[dependencies]
anyhow = "1.0.42"
aptos-cli-config = "0.1.0"
coinlist = { version = "0.1.0", features = ["address32"] }
move-deps = { version = "0.1.6", features = ["address32"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tera = "1"
toml = "0.5.0"
url = { version = "^2.2", features = ["serde"] }
